--- a/online-car-selection-system/src/main/resources/static/index.html
+++ b/online-car-selection-system/src/main/resources/static/index.html
@@ -608,10 +608,6 @@
 
         <div id="auth-section">
             <div class="auth-card">
-                <div class="tab-group">
-                    <button id="show-register-form-button" class="tab-button">注册</button>
-                    <button id="show-login-form-button" class="tab-button active">登录</button>
-                </div>
                 <div id="register-form" class="tab-content">
                     <h2>用户注册</h2>
                     <div class="form-group">
@@ -646,6 +642,12 @@
                     </div>
                     <div class="button-group">
                         <button id="login-button">登录</button>
+                    </div>
+                    <div style="margin-top: 18px; text-align: center;">
+                        <span style="color: #888; font-size: 16px;">
+                            没有账号，
+                            <a href="javascript:void(0);" id="to-register" style="color: #e53935; text-decoration: none; font-size: 18px;">去注册</a>
+                        </span>
                     </div>
                 </div>
             </div>
