--- a/online-car-selection-system/src/main/resources/static/index.html
+++ b/online-car-selection-system/src/main/resources/static/index.html
@@ -628,6 +628,7 @@
                     </div>
                     <div class="button-group">
                         <button id="register-button">注册</button>
+                        <button id="back-to-login-button" type="button" style="background:#6c757d; color:#fff; margin-top:10px;">返回登录</button>
                     </div>
                 </div>
                 <div id="login-form" class="tab-content" style="display: block;">
