添加登录按钮到头部导航栏

--- a/online-car-selection-system/src/main/resources/static/index.html
+++ b/online-car-selection-system/src/main/resources/static/index.html
@@ -603,6 +603,7 @@
             <div class="header-buttons">
                 <button id="view-profile-button">查看个人信息</button>
                 <button id="logout-button">注销</button>
+                <button id="login-header-button" style="display:none;">登录</button>
             </div>
         </div>
 
@@ -668,47 +669,22 @@
 
             <div id="cars-tab" class="tab-content active">
                 <div class="car-list" id="cars-container"></div>
-                <div class="pagination-controls">
-                    <button id="prev-page">上一页</button>
-                    <span id="page-info"></span>
-                    <button id="next-page">下一页</button>
-                </div>
             </div>
 
             <div id="brands-tab" class="tab-content">
                 <div class="brands-list" id="brands-container"></div>
-                <div class="pagination-controls">
-                    <button id="brand-prev-page">上一页</button>
-                    <span id="brand-page-info"></span>
-                    <button id="brand-next-page">下一页</button>
-                </div>
             </div>
 
             <div id="models-tab" class="tab-content">
                 <div class="models-list" id="models-container"></div>
-                <div class="pagination-controls">
-                    <button id="model-prev-page">上一页</button>
-                    <span id="model-page-info"></span>
-                    <button id="model-next-page">下一页</button>
-                </div>
             </div>
 
             <div id="favorites-tab" class="tab-content">
                 <div class="favorites-list" id="favorites-container"></div>
-                <div class="pagination-controls">
-                    <button id="favorite-prev-page">上一页</button>
-                    <span id="favorite-page-info"></span>
-                    <button id="favorite-next-page">下一页</button>
-                </div>
             </div>
 
             <div id="appointments-tab" class="tab-content">
                 <div class="appointments-list" id="appointments-container"></div>
-                <div class="pagination-controls">
-                    <button id="appointment-prev-page">上一页</button>
-                    <span id="appointment-page-info"></span>
-                    <button id="appointment-next-page">下一页</button>
-                </div>
             </div>
 
             <div class="list-container" id="car-detail-container" style="display: none;">
